--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ We provide SVGs for the social icons. But please feel free to use a font icon li
 - [IcoMoon](https://icomoon.io)
 - [Ionicons](https://ionicons.com) */
 
+/* generic */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap'); 
 
 * {
@@ -42,8 +43,7 @@ font-size: 13px;
 font-family: "Manrope", Verdana, sans-serif;
 font-weight: 100;
 height: 100vh;
-z-index: 1;
-/* position: absolute; */
+
 
 }
 
@@ -63,59 +63,100 @@ h1, h2 {
   
 }
 
+/* layout */
 .container {
   margin: 5em 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
-    border-radius: 8px;
-    position: relative;
-    box-shadow: 7px 7px 20px 0px hsl(212, 23%, 69%);
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
+  border-radius: 8px;
+  position: relative;
+  box-shadow: 7px 7px 20px 0px hsl(212, 23%, 69%);
+  overflow: hidden;
+  z-index: 1;
 
 }
 
 .image {
   background-image: url("images/drawers.jpg");
   height: 15em;
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  background-position: center; 
+  background-repeat: no-repeat; 
   background-size: cover;
   
 }
 
 .container_text {
-  padding: 2em;
+  padding: 2.5em;
   background-color: white;
 }
 
+/*footer */
 .button_share {
   background-image: url("images/icon-share.svg");
-  background-position: center; /* Center the image */
+  background-position: center; 
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  color:  white;
   background-color: hsl(212, 23%, 69%);
   margin-left: 2em;
-  
+  margin-top: 2em;
+  align-self: center;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; 
+  z-index: 2;
 }
+
+.button_share:hover{
+  background-color: hsl(217, 19%, 35%);
+}
+
+
 
 .footer {
   display: flex;
   flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 5em;
-    
-  
+  justify-content: space-between;
+  align-items: center;
+  height: 3.5em; 
+  margin-top: 2.5em;
 }
 
 .footer_informations {
   display: flex;
   flex-direction: column;
+  margin-left: 1em;
+  line-height: 0;
+}
+
+.footer_left {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+  width: 80%;
+}
+
+.links {
+ background-color: hsl(217, 19%, 35%) ;
+ display: flex;
+ flex-direction: row;
+ justify-content: flex-start;
+ padding: 1.5em;
+ width: 100%;
+ height: 7em;
+ position: absolute;
+ bottom: 0;
+ left: 0;
+ align-items: center;
+ 
+ display: none;
+ 
+}
+
+.links_text {
+  color: hsl(212, 23%, 69%);
+  text-transform: uppercase;
+  letter-spacing: 5px;
 }
 
 
@@ -137,7 +178,7 @@ background-image: url("images/icon-pinterest.svg");
 }
 
 .footer_image{
-width: 3em;
+  width: 3em;
   height: 3em;
   border-radius: 50%;
 }
@@ -145,9 +186,8 @@ width: 3em;
 .links_icon__01,
 .links_icon__02,
 .links_icon__03,
-.footer_image,
-.button_share {
-  
+.footer_image
+ {
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
@@ -157,95 +197,77 @@ width: 3em;
 .links_icon__02,
 .links_icon__03 {
   height: 25px;
-    width: 25px;
+  width: 25px;
+  margin: 1em;
 }
 
-.links {
- background-color: hsl(217, 19%, 35%) ;
- display: flex;
- flex-direction: row;
- justify-content: space-around;
- padding: 1.5em;
- width: 100%;
- height: 7em;
- position: absolute;
- bottom: 0;
- left: 0;
- align-items: center;
- 
 
-}
-
-.links_text {
-  color: hsl(212, 23%, 69%);
-  text-transform: uppercase;
-  letter-spacing: 5px;
-}
 
 @media screen and (min-width: 1440px) {
 
   .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 730px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 280px;
-
-  z-index: -1;
-  align-self: center;
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 730px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 280px;
+    align-self: center;
 }
  .title {
    font-size: 20px;
  }
 
-.image {
-  height: 100%;
-  width: 60em;
-  background-size: cover;
-  background-position: center left;
-}
+  .image {
+    height: 100%;
+    width: 60em;
+    background-size: cover;
+    background-position: center left;
+  }
 
-.container_text {
-  height: 100%;
-}
+  .container_text {
+    height: 100%;
+  }
 
-.attribution {
+  .attribution {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer{
+    position: relative;
+    margin: 0;
+  }
+
+  .links {
+  background-color: hsl(217, 19%, 35%) ;
   display: flex;
-  justify-content: center;
-}
+  flex-direction: row;
+  justify-content: space-around;
+  width: 20em;
+  height: 4em;
+  /* margin: 1em; */
+  position: absolute;
+  top: -170%;
+  left: 30%;
+  border-radius: 8px;
+  box-shadow: 7px 7px 10px 0px hsl(212, 23%, 69%);
+  display: none;
 
-.footer{
-  position: relative;
-}
+  }
 
-.links {
- background-color: hsl(217, 19%, 35%) ;
- display: flex;
- flex-direction: row;
- justify-content: space-around;
- width: 20em;
- height: 4em;
- margin: 1em;
- position: absolute;
- top: -80%;
- left: 70%;
- /* display: none; */
- border-radius: 8px;
- overflow: hidden;
- z-index: 1000;
+  .links_icon__01,
+  .links_icon__02,
+  .links_icon__03 {
+    height: 15px;
+      width: 15px;
+      margin: 0.5em;
+  }
 
-}
+  .button_share{
+    margin-top: 0;
+  }
 
-.links_icon__01,
-.links_icon__02,
-.links_icon__03 {
-  height: 15px;
-    width: 15px;
-    margin: 0.5em;
-}
 }
 
